--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular-svg-icon": "^16.1.0",
+    "bootstrap-icons": "^1.11.1",
     "ng2-currency-mask": "^13.0.3",
+    "ngx-mask": "^16.3.7",
+    "ngx-phone-mask-br": "^1.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
